--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
       <h2>
         Découvrez les meilleurs plans, la sécurité et un réseau d'aventuriers
-        pour rendre chaques voyage inoubliable
+        pour rendre chaque voyage inoubliable
       </h2>
       <div class="cards-container">
         <div class="card">
