--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <p>A propos</p>
         <p>FAQ</p>
         <p>Contact</p>
-        <p>Mentions légales</p>
+        <p>Mentions pas légales</p>
         <p>Politique de confidentialité</p>
       </div>
       <div class="reseaux">
